Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Bernoulli by mkonutgan</title>
+    <title>Bernoulli by kmikael</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="javascripts/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -19,15 +17,19 @@
       <header>
         <h1>Bernoulli</h1>
         <p>A Ruby library for the binomial distribution</p>
-        <p class="view"><a href="https://github.com/mkonutgan/bernoulli">View the Project on GitHub <small>mkonutgan/bernoulli</small></a></p>
+
+        <p class="view"><a href="https://github.com/kmikael/bernoulli">View the Project on GitHub <small>kmikael/bernoulli</small></a></p>
+
+
         <ul>
-          <li><a href="https://github.com/mkonutgan/bernoulli/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/mkonutgan/bernoulli/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/mkonutgan/bernoulli">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/kmikael/bernoulli/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/kmikael/bernoulli/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/kmikael/bernoulli">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
-        <h1>Bernoulli: Discrete probability distribution library for Ruby</h1>
+        <h1>
+<a name="bernoulli-discrete-probability-distribution-library-for-ruby" class="anchor" href="#bernoulli-discrete-probability-distribution-library-for-ruby"><span class="octicon octicon-link"></span></a>Bernoulli: Discrete probability distribution library for Ruby</h1>
 
 <p><strong>Bernoulli</strong> implements the four most common discrete probability distributions in an object oriented manner and in pure Ruby.</p>
 
@@ -36,14 +38,16 @@
 <li>The geometric distribution</li>
 <li>The hypergeometric distribution</li>
 <li>The Poisson distribution</li>
-</ul><h2>Installation</h2>
+</ul><h2>
+<a name="installation" class="anchor" href="#installation"><span class="octicon octicon-link"></span></a>Installation</h2>
 
 <p>Use RubyGems to install <code>bernoulli</code></p>
 
 <pre><code>$ gem install bernoulli
 </code></pre>
 
-<h2>Tutorial</h2>
+<h2>
+<a name="tutorial" class="anchor" href="#tutorial"><span class="octicon octicon-link"></span></a>Tutorial</h2>
 
 <p>The classes in <code>bernoulli</code> reprsent random variables:</p>
 
@@ -89,7 +93,8 @@
 <li>
 <code>[]</code>, which takes a number or a range and then executes <code>probability</code> or <code>probability_range</code>
 </li>
-</ul><h3>Example</h3>
+</ul><h3>
+<a name="example" class="anchor" href="#example"><span class="octicon octicon-link"></span></a>Example</h3>
 
 <pre><code>require 'bernoulli'
 require 'bernoulli/shorthand'
@@ -108,7 +113,8 @@ x[25..36] # =&gt; 0.7665588897840108
 
 <p>The method <code>sample_value</code> returns the number of successes in a random binomial expriment that was executed using <code>sample</code>. <code>sv</code> is a shortcut for <code>sample_value</code>.</p>
 
-<h2>Contributing</h2>
+<h2>
+<a name="contributing" class="anchor" href="#contributing"><span class="octicon octicon-link"></span></a>Contributing</h2>
 
 <p><code>bernoulli</code> is a small project. After writing the same code for some project and then losing it two or three times I decided to do it one time and well, so I can just call in the code from here next time.</p>
 
@@ -122,12 +128,12 @@ x[25..36] # =&gt; 0.7665588897840108
 <li>Create new Pull Request</li>
 </ol>
       </section>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/kmikael">kmikael</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
     </div>
-    <footer>
-      <p>Project maintained by <a href="https://github.com/mkonutgan">mkonutgan</a></p>
-      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
-    </footer>
-    <!--[if !IE]><script>fixScale(document);</script><!--<![endif]-->
+    <script src="javascripts/scale.fix.js"></script>
     
   </body>
 </html>
